@@ -1,7 +1,0 @@
-(ns vk.ntheory.alpha
-  (:require [clojure.math :as math]))
-
-
-
-
-
