@@ -1,15 +1,34 @@
 (ns vk.ntheory.basic-test
   (:require
    [clojure.test :refer [deftest is are testing]]
-   [vk.ntheory.basic :as b :refer [pow gcd gcd-extended sign order]]))
+   [vk.ntheory.basic :as b :refer [divides? pow gcd gcd-extended sign order]]))
 
-(deftest test-sign
+(deftest sign-test
   (is (= 1 (sign 2)))
   (is (= (- 1) (sign (- 2))))
   (is (= 0 (sign 0)))
   )
 
-(deftest test-pow
+(deftest divides?-test
+  (testing "Divide by zero"
+    (is (thrown? Exception (divides? 0 8)))
+    (is (thrown? Exception (divides? 0 -8)))
+  (testing "Everything divides 0, but 0"
+    (is (divides? 2 0))
+    (is (thrown? Exception (divides? 0 0))))
+    ) 
+  (testing "simple cases"
+    (are [x y] (= x y)
+      true (divides? 2 8)
+      true (divides? -2 8)
+      true (divides? 2 -8)
+      true (divides? -2 -8)
+      false (divides? 2 9)
+      false (divides? 2 -9)
+      false (divides? -2 9)
+      false (divides? -2 -9))))
+
+(deftest pow-test
   (testing "negative numbers"
     (is (thrown? Exception (pow 2 -1))))
   (testing "power of 2"
@@ -26,7 +45,7 @@
       512 (pow 2 9)
       1024 (pow 2 10))))
 
-(deftest test-order
+(deftest order-test
   (are [x y] (= x y)
     0 (order 2 1)
     1 (order 2 2)
@@ -40,7 +59,7 @@
     1 (order 2 10)))
 
 
-(deftest test-gcd
+(deftest gcd-test
   (are [x y] (= x y)
     0 (gcd 0 0)
     6 (gcd 6 0)
@@ -52,7 +71,7 @@
     6 (gcd 12 -18)
     6 (gcd -12 -18)))
 
-(deftest test-gcd-extended
+(deftest gcd-extended-test
   (doseq [a (range -12 12)
           b (range -12 12)]
     (let [[d s t] (gcd-extended a b)]
